# eurovat

./: .gitignore  Rates.md  Readme.md  fetch.py  mypy.ini  setup.cfg  setup.py  test.xml
.github/workflows/: deploy.yml  test.yml
eurovat/: __init__.py  cn_code.py  functions.py  rate.py  registry.py  states.py  tedb.py  utils.py  vat_number.py  vies.py
eurovat/.github/workflows/: test.yml
eurovat/cache/: __init__.py  cache.py  django.py  filesystem.py
eurovat/data/: __init__.py  vat_rules.json  vies.xml
tests/: __init__.py  test_cn_codes.py  test_vat_number.py  test_vat_rate.py
