[metadata]
name = eurovat
version = attr: eurovat.__version__
description = A python library to get the vat right in the EU.
long_description = file: Readme.md

url = https://github.com/airgproducts/eurovat
author = airG products
author_email='hello@airgproducts.com'

keywords = vat, eu, tax
license = MIT License
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:

test_suite=tests
install_requires=
    requests
    pycountry

[options.package_data]
data = eurovat/data/*

[options.packages.find]
exclude = tests
